Updates travis configuration

--- a/Gemfile.lte-2.2.2
+++ b/Gemfile.lte-2.2.2
@@ -11,12 +11,7 @@ group :development, :test do
   gem 'rspec-mocks'
   gem 'rspec-its'
 
-  gem 'timecop'
-  gem 'byebug', platform: :mri
+  gem 'timecop', '~> 0.8'
 
-  gem 'activesupport', '~> 5'
-
-  gem 'simplecov', require: false
-  gem 'coveralls', require: false
+  gem 'activesupport', '~> 4'
 end
-
