--- a/Gemfile.lte-1.9.3
+++ b/Gemfile.lte-1.9.3
@@ -4,19 +4,14 @@ source "http://rubygems.org"
 gemspec
 
 group :development, :test do
-  gem "rake"
+  gem 'rake'
 
   gem 'rspec-core', '~> 3'
   gem 'rspec-expectations'
   gem 'rspec-mocks'
   gem 'rspec-its'
 
-  gem 'timecop'
-  gem 'byebug', platform: :mri
+  gem 'timecop', '~> 0.8'
 
-  gem 'activesupport', '~> 5'
-
-  gem 'simplecov', require: false
-  gem 'coveralls', require: false
+  gem 'activesupport', '~> 3'
 end
-
